# RustFileExplorer

./: Cargo.toml  README.md
src/: dir.rs  main.rs
ui/: appwindow.slint
