[package]
name = "file-explorer"
version = "0.1.0"
authors = ["Nvt5"]
license = "MIT"
description = "Rust file explorer built with slint."
readme = "README.md"
homepage = ""
repository = ""
keywords = ["file-explorer", "slint"]
categories = ["filesystem"]
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
